fix: update swagger endpoints
